--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,26 @@
-header, body{
+body{
     margin: 0;
     padding: 0;
     background-color: #DCD7C9;
 }
 
+header{
+    padding: 0 25px;
+    height: 50px;
+    background-color: #2C3639
+}
+
 /* Navbar characteristics */
-.navbar{
-    border: solid;
-    border-color: #2C3639;
-    background-color: #2C3639;
-}
-
-/* Navbar bullet remove */
 .navbar-items{
+    align-items: center;
+    margin-left: 90px;
+    display: flex;
+    justify-content: right;
     list-style-type: none;
+    position: relative;
+    bottom: 55px;
 }
 
-/* Group name characteristics */
 .name{
     text-decoration: none;
     color: #DCD7C9;
@@ -25,89 +29,119 @@ header, body{
     font-size: 32px;
 }
 
-.group-name{
-    margin: 0;
-    margin-left: 3%;
-}
-
-/* Navbar contents */
-.navbar-links{
-    position: relative;
-    bottom: 30px;
-    float: right;
+.links{
+    margin: 0 25px;
+    display: inline-block;
+    text-decoration: none;
     font-family: 'Oswald', sans-serif;
+    color: #DCD7C9;
+    font-size: 16px;
     font-weight: 200;
 }
-
-.links{
-    position: relative;
-    right: 50%;
-    bottom: 7px;
-    margin-left: 20px;
-    margin-right: 50px;
-    text-decoration: none;
-    color: #DCD7C9;
-    font-size: 18px;
-}
-
-/* Text hover transition */
 .links:hover{
-    border-top: 3px solid #DCD7C9;
-    padding-top: 26px;
-    width: 100%;
+    color: #A27B5C;
     transition: 250ms;
 }
 
-.links::after{
-    border-top: 3px solid #DCD7C9;
-    padding-top: 26px;
-    width: 0%;
-    transition: 250ms;
-}
-
-/* About button characteristics */
-.about{
-    float: right;
-    margin-left: 20px;
-    margin-right: 50px;
-    position: relative;
-    bottom: 15px;
-}
-
-.about{
-    border: transparent;
+.btn-about{
     background-color: #A27B5C;
+    border: transparent;
     width: 160px;
-    padding: 8px;
     border-radius: 20px;
     cursor: pointer;
 }
 
-.about{
+.btn-about{
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
     color: #DCD7C9;
     font-size: 18px;
+    padding: 3px
 }
 
-/* About button transition */
-.about:before{
-    font-family: 'Oswald', sans-serif;
-    font-weight: 500;
-    color: #DCD7C9;
-    font-size: 18px;
-}
-
-.about:hover{
+.btn-about:hover{
     background-color: #3F4E4F;
     color: #ffff;
     transition: 150ms;
 }
 
-.about:after{
-    font-family: 'Oswald', sans-serif;
-    font-weight: 500;
-    color: #DCD7C9;
-    font-size: 18px;
-    transition: 200ms;
+.nav-menu{
+    display: none;
+}
+
+/* Mobile Screen */
+
+@media only screen and (max-width: 633px) {
+    .name{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .navbar-items{
+        display: none;
+    }
+
+    .nav-menu{
+        display: contents;
+    }
+
+    .navbar-mobile{
+        margin: 0;  
+        position: relative;
+        top: 50px;
+        left: 0px;
+    }
+
+    .navbar-mobile{
+        flex-direction: row;
+        border: solid;
+        border-color: #A27B5C;
+        background: #A27B5C;
+        position: absolute;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .mobile-links{
+        text-decoration: none;
+    }
+
+    .mobile-links{
+        margin: 0 5px;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 200;
+        color: #2C3639;
+    }
+    .mobile-links:hover{
+        color: #DCD7C9;
+        transition: 200ms;
+    }
+
+    .mobile-btn-about{
+    }
+
+    .mobile-btn-about{
+        margin: 0 15px;
+        border: solid;
+        background-color: #3F4E4F;
+        border-color: #3F4E4F;
+        border-radius: 20px;
+        padding: 1px;
+        width: 100px;
+        position: relative;
+        cursor: pointer;
+    }
+
+    .mobile-btn-about{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 200;
+        color: #DCD7C9;
+    }
+
+    .mobile-btn-about:hover{
+        border-color: #2C3639;
+        background-color: #2C3639;
+        transition: 200ms;
+    }
 }
