--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body{
 header{
     padding: 0 25px;
     height: 50px;
-    background-color: #2C3639
+    background-color: #2C3639;
 }
 
 /* Navbar characteristics */
@@ -39,12 +39,12 @@ header{
     font-weight: 200;
 }
 .links:hover{
-    color: #A27B5C;
+    color: #99A799;
     transition: 250ms;
 }
 
 .btn-about{
-    background-color: #A27B5C;
+    background-color: #99A799;
     border: transparent;
     width: 160px;
     border-radius: 20px;
@@ -54,7 +54,7 @@ header{
 .btn-about{
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
-    color: #DCD7C9;
+    color: #1d1d1d;
     font-size: 18px;
     padding: 3px
 }
@@ -116,9 +116,6 @@ header{
     .mobile-links:hover{
         color: #DCD7C9;
         transition: 200ms;
-    }
-
-    .mobile-btn-about{
     }
 
     .mobile-btn-about{
