--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,8 @@ header{
     display: none;
 }
 
+
+/* About Us page */
 .ausejo-image{
     height: 300px;
 }
@@ -81,37 +83,234 @@ header{
 
 .ausejo-image{
     border: solid;
-    border-color: #99A799;
+    border-color: #2C3333;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .text{
     border: solid;
-    border-color: #99A799;
-    border-top: #DCD7C9;
-    background: #99A799;
+    border-color: #2C3333;
+    border-top: #2C3333;
+    background: #2C3333;
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
     padding: 5px;
     width: 290px;
     position: relative;
     bottom: 5px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .text{
     position: relative;
+    color: #DCD7C9;
     margin-top: 0px;
     margin-left: 30px;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 300;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
     font-size: 18px;
 }
 
+.barlam-image{
+    height: 300px;
+    width: 300px;
+}
+
+.barlam-image{
+    margin: 0 502px;
+    margin-bottom: 1px;
+    position: absolute;
+    top: 81px;
+}
+
+.barlam-image{
+    border: solid;
+    border-color: #2C3333;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.person-2-text{
+    color: #DCD7C9;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
+    font-size: 18px;
+}
+
+.person-2-text{
+    border: solid;
+    border-color: #2C3333;
+    border-top: #2C3333;
+    background: #2C3333;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    padding: 5px;
+    width: 290px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.person-2-text{
+    margin: 0 502;
+    position: absolute;
+    top: 387px;
+}
+
+.vista-image{
+    height: 300px;
+}
+
+.vista-image{
+    margin-bottom: 1px;
+    position: absolute;
+    top: 84px;
+    right: 27px;
+}
+
+.vista-image{
+    border: solid;
+    border-color: #2C3333;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.person-3-text{
+    color: #DCD7C9;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
+    font-size: 18px;
+}
+
+.person-3-text{
+    position: absolute;
+    top: 387px;
+    right:  27px;
+}
+
+.person-3-text{
+    border: solid;
+    border-color: #2C3333;
+    border-top: #2C3333;
+    background: #2C3333;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    padding: 5px;
+    width: 292px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
 
 
+/* Contact page */
+.page-header{
+    color: #2C3333;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    font-size: 32px;
+}
+
+.contact-info{
+    margin: 0 30px;
+    border: solid;
+    border-color: #2C3333;
+    background-color: #2C3333;
+    border-radius: 6px;
+    width: 290px;
+    height: 300px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.contact-title{
+    color: #e0e0e0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+    text-decoration: underline;
+    text-underline-offset: 15px;
+}
+
+.facebook-link{
+    text-decoration: none;
+    color: #e0e0e0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
+    font-size: 24px;
+}
+.facebook-link:hover{
+    font-size: 25px;
+    transition: ease-in-out 200ms;
+}
+
+.mail-me{
+    text-decoration: none;
+    color: #e0e0e0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+}
+.mail-me:hover{
+    font-size: 17px;
+    transition: ease-in-out 200ms;
+}
+
+.contact-info_2{
+    margin: 0 502px;
+    margin-bottom: 1px;
+    position: absolute;
+    top: 230px;
+}
+
+.contact-info_2{
+    border: solid;
+    border-color: #2C3333;
+    background-color: #2C3333;
+    border-radius: 6px;
+    width: 290px;
+    height: 300px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.mail-me-2{
+    text-decoration: none;
+    color: #e0e0e0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
+    font-size: 16px;
+}
+.mail-me-2:hover{
+    font-size: 17px;
+    transition: ease-in-out 200ms;
+}
+
+.contact-info_3{
+    margin-bottom: 1px;
+    position: absolute;
+    top: 230px;
+    right: 27px;
+}
+
+.contact-info_3{
+    border: solid;
+    border-color: #2C3333;
+    background-color: #2C3333;
+    border-radius: 6px;
+    width: 290px;
+    height: 300px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+.mail-me-3:hover{
+    font-size: 17px;
+    transition: ease-in-out 200ms;
+}
+
+.home-bgrd{
+    border: solid;
+}
 
 
 
